Fix BK_MEM not set