@@ -33,7 +33,8 @@ BOOKIE_CONF=${BOOKIE_CONF:-"$BK_HOME/conf/bookkeeper.conf"}
 # BOOKIE_LOG_DIR=
 
 # Memory size options
-BOOKIE_MEM=${BOOKIE_MEM:-${PULSAR_MEM:-""}}
+#BOOKIE_MEM=${BOOKIE_MEM:-${PULSAR_MEM:-""}}
+BOOKIE_MEM=" -Xms{{ max_heap_memory }} -Xmx{{ max_heap_memory }} -XX:MaxDirectMemorySize={{ max_direct_memory }} -Xlog:gc*"
 
 # Garbage collection options
 BOOKIE_GC=${BOOKIE_GC:-"-XX:+UseG1GC -XX:MaxGCPauseMillis=10 -XX:+ParallelRefProcEnabled -XX:+UnlockExperimentalVMOptions -XX:+DoEscapeAnalysis -XX:G1NewSizePercent=50 -XX:-ResizePLAB"}
